Fix hero spacing bug

--- a/style.css
+++ b/style.css
@@ -17,8 +17,10 @@
     display: flex;
     gap: 8px;
  }
+
  .container {
    display: flex;
+   flex-direction: column;
    justify-content: space-between;
  }
 
@@ -32,7 +34,9 @@
  .header {
     display: flex;
     justify-content: space-between;
+    margin-bottom: 20px;
  }
+
 
  .logo {
     color: #F9FAF8;
@@ -53,13 +57,20 @@
  a {
     color: #E5E7EB;
     font-size: 18px;
+ } 
+
+ .information,
+ .info,
+ .cards {
+   display: flex;
+   align-items: center;
+   justify-content: center;
  }
 
- /* .information {
- } */
-
- /* .info {
- } */
+ .info {
+   align-items: center;
+   justify-content: center;
+ }
 
  /* .cards {   
  } */
@@ -93,7 +104,7 @@
 
  /* .sub {
  } */
-
+/* 
 .footer {
    background-color: #1F2937;
    color: #E5E7EB;
